Implement header and footer ejs partials

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     </main>
         <footer class="pt-3 mt-3 container">
                 <p id="copyright" class="">
-                    Copyright 2020 Robert Greenstreet
+                    Copyright <%= new Date().getFullYear() %> Robert Greenstreet
                 </p>
             <!-- <script src="/javascripts/jquery-ui.min.js" ></script> -->
             <script>
