--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<%- include( 'partials/header') %> 
+<h1>Body</h1>
+<%- include( 'partials/footer') %> 
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
@@ -8,4 +12,4 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
-</html>
+</html> -->
