Add basic routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title><%#= title %></title>
+        <title><%= title %></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=.9, shrink-to-fit=no">
 		<link rel="icon" href="/images/favicon.png" type="image/x-icon/">
@@ -26,7 +26,7 @@
 			
 			<div class="container">
 				<nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top" id="navbar">
-				  <a class="navbar-brand js-scroll-trigger" href="#top">Recipe Book</a>
+				  <a class="navbar-brand js-scroll-trigger" href="/">Recipe Book</a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navHamburger" aria-controls="navHamburger" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
 						<span class="icon-bar hamburger-bar"></span>
