--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include( 'partials/header') %> 
-<h1>Body</h1>
+<h1><%= title %></h1>
 <%- include( 'partials/footer') %> 
 
 <!-- <!DOCTYPE html>
