--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
 			
 			<div class="container">
 				<nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top" id="navbar">
-				  <a class="navbar-brand js-scroll-trigger" href="/">Recipe Book</a>
+				  <a class="navbar-brand js-scroll-trigger" href="/">Book Tracking</a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navHamburger" aria-controls="navHamburger" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
 						<span class="icon-bar hamburger-bar"></span>
@@ -35,11 +35,9 @@
 					</span>
 				  </button>
 				  <div class="collapse navbar-collapse" id="navHamburger">
-					<a class="nav-link js-scroll-trigger" href="/users/dashboard">Dashboard</a>
-					<a class="nav-link js-scroll-trigger" href="/recipes">Recipes</a>
-					<a class="nav-link js-scroll-trigger" href="/ingredients">Ingredients</a>
-					<a class="nav-link js-scroll-trigger" href="/plans">Meal Plans</a>
-					<a class="nav-link js-scroll-trigger" href="/shopping-list">Shopping List</a>
+					<a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
+					<a class="nav-link js-scroll-trigger" href="/books-read">Books I've Read</a>
+					<a class="nav-link js-scroll-trigger" href="/browse-books">Browse Books</a>
 				  </div>
 				</nav>
 			</div>	
