--- a/views/books-read.ejs
+++ b/views/books-read.ejs
@@ -53,7 +53,14 @@
             </div>
         </div>
         <div class="col-9" id="results">
-
+            <div class="row">
+                <div class="col card m-1" id="search-results">
+                    <div class="card-body">
+                        <h2 class="card-title">Results</h2>
+                        <%- include( 'partials/results') %> 
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
