move 'books-read' and 'browse-books' to 'books' directory in preparation for further book-oriented pages

--- a/views/books/books-read.ejs
+++ b/views/books/books-read.ejs
@@ -1,4 +1,4 @@
-<%- include( 'partials/header') %> 
+<%- include( '../partials/header') %> 
 <div class="container">
 
     <h1>Books I've Read</h1>
@@ -57,12 +57,12 @@
                 <div class="col card m-1" id="search-results">
                     <div class="card-body">
                         <h2 class="card-title">Results</h2>
-                        <%- include( 'partials/results') %> 
+                        <%- include( '../partials/results') %> 
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<%- include( 'partials/footer') %> 
+<%- include( '../partials/footer') %> 
 
