continue layout for 'books I've read'

--- a/views/books/books-read.ejs
+++ b/views/books/books-read.ejs
@@ -50,6 +50,12 @@
                         <label class="form-check-label" for="bookNotFinished">No</label>
                     </div>
                 </form>
+                <button class="btn btn-primary mt-3" id="create-book">Add New Book</button>
+                <!-- 
+                    Displays field to search by title, after selecting title (connected to goodreads API?), goes to 'book details' page to add more information 
+                    When book is created, automatically sets 'start date' to current day
+                    First click changes button text to 'Cancel' which hides search field if clicked
+                -->
             </div>
         </div>
         <div class="col-9" id="results">
