--- a/views/books/browse-books.ejs
+++ b/views/books/browse-books.ejs
@@ -1,4 +1,32 @@
 <%- include( '../partials/header') %> 
-<h1><%= title %></h1>
+<div class="container">
+
+    <h1>Browse Books You Might Like </h1>
+    <p>Selections based on books you've enjoyed previously</p>
+
+    <div class="main row">
+        <section class="col">
+            <div class="row">
+                <div class="col" id="filters">
+                    <%- include('../partials/filters') %>
+                </div>
+            </div>
+        </section>
+        <div class="col-9">
+            <section class="attribute-group mb-3" id="attribute-one">
+                <h2>Books in Urban Settings</h2>
+                <%- include( '../partials/results') %> 
+            </section>
+            <section class="attribute-group mb-3" id="attribute-two">
+                <h2>Books with romance sub-plots</h2>
+                <%- include( '../partials/results') %> 
+            </section>
+            <section class="attribute-group mb-3" id="attribute-three">
+                <h2>Books with a powerful protagonist</h2>
+                <%- include( '../partials/results') %> 
+            </section>
+        </div>
+    </div>
+</div>
 <%- include( '../partials/footer') %> 
 
