finish bare bones page structure. create controllers and models directories. update nodemon ignore parameters

--- a/views/books/browse-books.ejs
+++ b/views/books/browse-books.ejs
@@ -14,7 +14,7 @@
         </section>
         <div class="col-9">
             <section class="attribute-group mb-3" id="attribute-one">
-                <h2>Books in Urban Settings</h2>
+                <h2>Books in Modern Settings</h2>
                 <%- include( '../partials/results') %> 
             </section>
             <section class="attribute-group mb-3" id="attribute-two">
