make progress on uploading images and creating users. still need to figure out how to get full cloudinary response back from multer, instead of default multer response

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title><%= title %></title>
+        <title><%= typeof title !== 'undefined' ? title : 'Book Tracker' %></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=.9, shrink-to-fit=no">
 		<link rel="icon" href="/images/favicon.png" type="image/x-icon/">
