--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,7 +22,7 @@
                 </div>
                 <div class="input-group mb-3">
                     <label for="profilePicture" class="form-label input-group-text">Profile Picture</label>
-                    <input class="form-control" type="file" id="profilePicture">
+                    <input class="form-control" type="file" id="image">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
