--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,3 +12,43 @@ a {
   background-color: rgba(145, 145, 145, 0.5);
 }
 
+.bucket0 {
+  background-color: #ccc;
+  font-size: 1rem;
+}
+.bucket1 {
+  background-color: green;
+  font-size: 1.1rem;
+}
+.bucket2 {
+  background-color: blue;
+  font-size: 1.2rem;
+}
+.bucket3 {
+  background-color: teal;
+  font-size: 1.3rem;
+}
+.bucket4 {
+  background-color: pink;
+  font-size: 1.4rem;
+}
+.bucket5 {
+  background-color: brown;
+  font-size: 1.5rem;
+}
+.bucket6 {
+  background-color: purple;
+  font-size: 1.6rem;
+}
+.bucket7 {
+  background-color: yellow;
+  font-size:1.7rem;
+}
+.bucket8 {
+  background-color: orange;
+  font-size: 1.8rem;
+}
+.bucket9 {
+  background-color: red;
+  font-size: 1.9rem;
+}
