--- a/views/books/book-details.ejs
+++ b/views/books/book-details.ejs
@@ -4,7 +4,7 @@
         <section class="col-3" id="book-tag-cloud">
             <div class="row">
                 <div class="col">
-    
+                    <%- cloud %>
                 </div>
             </div>
         </section>
