Further styling for tag cloud on review details

--- a/views/books/book-details.ejs
+++ b/views/books/book-details.ejs
@@ -4,6 +4,7 @@
         <section class="col-md-4" id="book-tag-cloud">
             <div class="row">
                 <div class="col">
+                    <h2>Tags</h2>
                     <%- include('../partials/tag-cloud'); %>
                 </div>
             </div>
