--- a/views/partials/tag-cloud.ejs
+++ b/views/partials/tag-cloud.ejs
@@ -1,9 +1,9 @@
-<ul class="tags">
+<ul class="tags px-0">
     <% const maxFontSize = 2 %>
     <% for (let tag of tags) { %>
         <% let fontSize = tag.count/highestCount * maxFontSize %>
         <!-- Assign each tag to a 'bucket' for styling based on popularity -->
-        <% let bucketNumber = Math.round(tag.count/highestCount * 5) %>
+        <% let bucketNumber = Math.floor(tag.count/highestCount * 5) %>
         <% fontSize = +fontSize.toFixed(2) %>
         <!-- Make sure font size will be at least 1em -->
         <% if (fontSize <= 1) { %>
@@ -13,7 +13,14 @@
           <% } %>
 
         <li class="tag">
-            <a class="tag-link btn py-0 bucket<%= bucketNumber %>" href="/books/?t=<%= tag.id %>" style="font-size: <%= fontSize %>em"><%= tag.title %></a>
+            <a class="tag-link btn py-0 bucket<%= bucketNumber %>" 
+                href="/books/?t=<%= tag.id %>" 
+                style="font-size: <%= fontSize %>em"
+                data-bs-toggle="tooltip" 
+                data-bs-html="true" 
+                title="<%= tag.description.substr(0,40) %>... (Click for more)">
+                <%= tag.title %>
+            </a>
         </li>
         
     <% }; %>
