--- a/views/partials/display-stars.ejs
+++ b/views/partials/display-stars.ejs
@@ -1,4 +1,4 @@
-<div class="averageStars mb-2 d-inline mr-2">
+<div class="averageStars mb-2 d-inline">
     <% for(let i = 0;i<5;i++) { %>
         <% if(i < floorRating) { %>
             <!-- show full star -->
