--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=.9, shrink-to-fit=no">
 		<link rel="icon" href="/images/favicon.png" type="image/x-icon/">
 		<!-- bootstrap styles -->
-        <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<!-- google fonts Latio import -->
 		<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 		<!-- FontAwesome styles and scripts -->
