--- a/views/books/book-details.ejs
+++ b/views/books/book-details.ejs
@@ -33,14 +33,72 @@
                                     <% } %>
                                     <%= combinedAuthors %>
                                 </h3>
-                                <a href="<%= googleBook.volumeInfo.infoLink %>" target="_blank"><img src="/images/poweredbygoogle.png" alt="Powered by Google" srcset=""></a>
+                                <% if(currentUser.role = 'owner') { %>
+                                    <div class="row" id="owner-controls">
+                                        <div class="col">
+                                            <button type="button" class="btn btn-warning my-1" data-toggle="modal" data-target="#confirm-unpublish-modal">Unpublish book</button>
+                                        </div>
+                                        <div class="col">
+                                            <button type="button" class="btn btn-danger my-1" data-toggle="modal" data-target="#confirm-delete-modal">Delete book</button>
+                                        </div>
+                                    </div>
+
+                                    
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="confirm-unpublish-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-unpublish-label" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="confirm-unpublish-label">Unpublish Book?</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Are you sure you want to unpublish this book? It will no longer be available for users to write reviews, but existing reviews will remain in place. This action *can* be undone by an "Owner" user.</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <form action="/books/<%= currentBook.id %>/unpublish?method=PUT" class="unpublish-book" id="unpublish-book" method="post">
+                                                    <button class="btn btn-warning my-1">Unpublish book</button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="confirm-delete-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-delete-label" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="confirm-delete-label">Delete Book?</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Are you sure you want to delete this book? All user-created reviews associated with this book will be permanently removed, and no new reviews for this book can be created. This action *CANNOT* be undone.</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <form action="/books/<%= currentBook.id %>/unpublish?method=DELETE" class="delete-book" id="delete-book"  method="post">
+                                                    <button class="btn btn-danger my-1">Delete book</button>
+                                                </form>
+                                            </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                <% } %>
                             </div>
                         </div>
                         <div class="row p-1">
                             <div class="col card-body">
                                 <hr class=" mt-0"/>
                                 <p class="card-text">
-                                    <%- googleBook.volumeInfo.description %>
+                                    <% if(googleBook.volumeInfo.description) { %>
+                                        <%- googleBook.volumeInfo.description %>
+                                    <% } else { %>
+                                        <p class="no-description">No description available for this book</p>
+                                    <% } %>
+                                    <a href="<%= googleBook.volumeInfo.infoLink %>" target="_blank" class="powered-by-google py-2"><img src="/images/poweredbygoogle.png" alt="Powered by Google"></a>
                                 </p>
                             </div>
                         </div>
@@ -50,5 +108,6 @@
         </section>
     </div>
 </div>
+  
 <%- include( '../partials/footer') %> 
 
